--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-tabs": "^6.1.0",
+    "react-tooltip": "^5.28.0",
     "recharts": "^2.15.1",
     "tailwindcss": "^4.0.17"
   },
