--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "apexcharts": "^4.5.0",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.6.2",
+    "highcharts": "^12.2.0",
+    "highcharts-react-official": "^3.2.1",
     "or": "^0.2.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
