Core and Custom

--- a/package.json
+++ b/package.json
@@ -10,24 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nivo/pie": "^0.89.1",
     "@tailwindcss/vite": "^4.0.17",
+    "ag-grid-community": "^33.2.4",
+    "ag-grid-react": "^33.2.4",
     "apexcharts": "^4.5.0",
     "chart.js": "^4.4.8",
-    "framer-motion": "^12.6.2",
+    "framer-motion": "^12.9.1",
     "highcharts": "^12.2.0",
     "highcharts-react-official": "^3.2.1",
     "or": "^0.2.0",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-csv": "^2.2.2",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-tabs": "^6.1.0",
-    "react-tooltip": "^5.28.0",
+    "react-tooltip": "^5.28.1",
     "recharts": "^2.15.1",
-    "tailwindcss": "^4.0.17"
+    "tailwindcss": "^4.0.17",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
