--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@nivo/pie": "^0.89.1",
     "@tailwindcss/vite": "^4.0.17",
     "ag-grid-community": "^33.2.4",
+    "ag-grid-enterprise": "^33.2.4",
     "ag-grid-react": "^33.2.4",
     "apexcharts": "^4.5.0",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.9.1",
     "highcharts": "^12.2.0",
     "highcharts-react-official": "^3.2.1",
+    "install": "^0.13.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "npm": "^11.3.0",
     "or": "^0.2.0",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
@@ -31,6 +34,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-tabs": "^6.1.0",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
     "recharts": "^2.15.1",
     "tailwindcss": "^4.0.17",
