--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^32.3.5",
     "@nivo/pie": "^0.89.1",
     "@tailwindcss/vite": "^4.0.17",
     "ag-grid-community": "^33.2.4",
@@ -25,7 +26,6 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "npm": "^11.3.0",
-    "or": "^0.2.0",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -33,7 +33,9 @@
     "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.4.0",
+    "react-svg-worldmap": "^2.0.0-alpha.16",
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
