All routes completed

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ag-grid-community/client-side-row-model": "^32.3.5",
     "@nivo/pie": "^0.89.1",
     "@tailwindcss/vite": "^4.0.17",
+    "@uiw/react-color-chrome": "^2.5.5",
     "ag-grid-community": "^33.2.4",
     "ag-grid-enterprise": "^33.2.4",
     "ag-grid-react": "^33.2.4",
@@ -25,11 +26,13 @@
     "install": "^0.13.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
-    "npm": "^11.3.0",
+    "npm": "^11.4.1",
+    "or": "^0.2.0",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
+    "react-colorful": "^5.6.1",
     "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
