--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-colorful": "^5.6.1",
     "react-csv": "^2.2.2",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
