--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apexcharts": "^4.5.0",
     "axios": "^1.9.0",
     "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "framer-motion": "^12.9.1",
     "highcharts": "^12.2.0",
     "highcharts-react-official": "^3.2.1",
