--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.4.0",
     "react-svg-worldmap": "^2.0.0-alpha.16",
     "react-tabs": "^6.1.0",
