--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ag-grid-community/client-side-row-model": "^32.3.5",
+    "@headlessui/react": "^2.2.4",
     "@nivo/pie": "^0.89.1",
     "@tailwindcss/vite": "^4.0.17",
     "@uiw/react-color-chrome": "^2.5.5",
